publish: Tweak intro
generated from commit 1a9a6682cad541dbf26bcca3e77673e15ad8ea42

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <p>Welcome to the ZenProspect API! </p>
 
-<p>Our API is still under active development. Eventually, we plan to make available in the API almost everything you can do in the UI, plus some things you can&rsquo;t. Additionally, if you have have any suggestions for API methods you&rsquo;d like to see, please let us know! We would be happy to see if we can build it into our API.</p>
+<p>Our API is still under active development. Eventually, we plan to make available in the API almost everything you can do in the UI, plus some extra functionality not available in the UI. Additionally, if you have have any suggestions for API methods you&rsquo;d like to see, please let us know! We would be happy to see if we can build it into our API.</p>
 
           <h1 id="authentication">Authentication</h1>
 
