--- a/index.html
+++ b/index.html
@@ -649,6 +649,46 @@ You must replace <code>testzenprospectapikey</code> with your personal API key.
 
 <h2 id="contacts">Contacts</h2>
 
+<h3 id="edit-contact">Edit Contact</h3>
+<pre class="highlight shell"><code>curl <span class="s2">"https://www.zenprospect.com/api/v1/contacts/54a3b5a8746869367615770c"</span> 
+-H <span class="s1">'Content-Type: application/json'</span> 
+-H <span class="s2">"Authorization: testzenprospectapikey"</span>
+-X PUT 
+-d <span class="s1">'{
+  "first_name":"Bob",
+  "custom_fields": {
+    "Personalized Snippet": "Blah blah blah blah."
+  }
+}'</span> 
+
+</code></pre>
+
+<h4 id="query-parameters">Query Parameters</h4>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>first_name</td>
+<td></td>
+</tr>
+<tr>
+<td>last_name</td>
+<td></td>
+</tr>
+<tr>
+<td>custom_fields</td>
+<td>A JSON object/hash of the custom fields (see example above).</td>
+</tr>
+<tr>
+<td>TODO</td>
+<td>about 30 more fields that can be edited&hellip; TODO</td>
+</tr>
+</tbody></table>
+
 <h2 id="customer-profiles">Customer Profiles</h2>
 
 <h2 id="mailings">Mailings</h2>
