publish: page, per_page parameter
generated from commit 6a1b2fab94505fd3fedca7d792399378d28944ad

--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
 <td>sort_ascending</td>
 <td>Possible values: true or false</td>
 </tr>
+<tr>
+<td>page</td>
+<td>which page to return. Defaults to 1</td>
+</tr>
+<tr>
+<td>per_page</td>
+<td>how many contacts to return per page. Max = 200</td>
+</tr>
 </tbody></table>
 
 <h2 id="getting-a-list-of-contact-stages">Getting a list of contact stages</h2>
