publish: api docs tweak
generated from commit eac7168746c892f5b600de991cb9e0db1dccf756

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <p>Welcome to the ZenProspect API! </p>
 
-<p>Our API is still under active development. It is subject to change without prior notice from ZenProspect. </p>
+<p><strong>Our API is still under active development. It is subject to change without prior notice from ZenProspect.</strong> </p>
 
 <p>Eventually, we plan to make available in the API almost everything you can do in the UI, plus some extra functionality not available in the UI. Additionally, if you have have any suggestions for API methods you&rsquo;d like to see, please let us know! We would be happy to see if we can build it into our API.</p>
 
@@ -140,7 +140,7 @@ curl -X GET -H <span class="s2">"Content-Type: application/json"</span> -H <span
 <p>If authentication is successful, you should expect to see {&ldquo;is_logged_in&rdquo;:true}</p>
 </blockquote>
 
-<p>ZenProspect uses API keys to allow access to the API. Please contact your dedicated Customer Success Manager for your API key.</p>
+<p>ZenProspect uses API keys to allow access to the API. Your may request an API key <a href="https://www.zenprospect.com/app/#/settings/api">here</a></p>
 
 <p>ZenProspect expects for the API key to be included in all API requests to the server in as a query string parameter. </p>
 
