--- a/index.html
+++ b/index.html
@@ -417,7 +417,160 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 </tr>
 </tbody></table>
 
-          
+<h2 id="updating-contact-ownership">Updating Contact Ownership</h2>
+
+<blockquote>
+<p>Update a contact owner:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> -d <span class="s1">'{
+    "api_key": "YOUR API KEY HERE",
+    "contact_ids": ["contact_id1", "contact_id2"],
+    "owner_id": "owner_id"
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/contacts/update_owners"</span>
+</code></pre>
+
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/contacts/update_owners</code></p>
+
+<h3 id="query-parameters">Query Parameters</h3>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>contact_ids</td>
+<td>An array of contact ids. You can filter for a list of contact IDS with the contacts/search API.</td>
+</tr>
+<tr>
+<td>owner_id</td>
+<td>The owner id to change into. You can GET a list of possible users and its associated information from /users</td>
+</tr>
+</tbody></table>
+
+          <h1 id="accounts-api">Accounts API</h1>
+
+<p>Account is a company your team has explicitly added to your database. It can be from prospected from ZenProspect, manually added by your team, or created by the API.</p>
+
+<h2 id="searching-for-accounts">Searching for accounts</h2>
+
+<blockquote>
+<p>Searching for accounts:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> -d <span class="s1">'{
+    "api_key": "YOUR API KEY HERE",
+    "sort_by_field": "account_last_activity_date",
+    "sort_ascending": false
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/accounts/search"</span>
+</code></pre>
+
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/accounts/search</code></p>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>q_organization_name</td>
+<td>The account&rsquo;s name</td>
+</tr>
+<tr>
+<td>account_stage_ids</td>
+<td>An array of stage ids the account must belong to. Refer to /account_stages to get a list of possible stage ids.</td>
+</tr>
+<tr>
+<td>sort_by_field</td>
+<td>Possible values: &ldquo;account_last_activity_date&rdquo; or &ldquo;account_created_at&rdquo;</td>
+</tr>
+<tr>
+<td>sort_ascending</td>
+<td>Possible values: true or false</td>
+</tr>
+<tr>
+<td>page</td>
+<td>which page to return. Defaults to 1</td>
+</tr>
+<tr>
+<td>per_page</td>
+<td>how many accounts to return per page. Max = 200</td>
+</tr>
+</tbody></table>
+
+<h2 id="getting-a-list-of-account-stages">Getting a list of Account Stages</h2>
+<pre class="highlight shell"><code>curl -X GET -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> -d <span class="s1">'{
+    "api_key": "YOUR API KEY HERE"
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/account_stages"</span>
+</code></pre>
+
+<p><code class="prettyprint">GET https://www.zenprospect.com/api/v1/account_stages</code></p>
+
+<h2 id="updating-account-stage">Updating Account Stage</h2>
+
+<blockquote>
+<p>Update a account stage:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> -d <span class="s1">'{
+    "api_key": "YOUR API KEY HERE",
+    "account_ids": ["account_id1", "account_id2"],
+    "account_stage_id": "stage_id"
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/accounts/bulk_update"</span>
+</code></pre>
+
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/accounts/bulk_update</code></p>
+
+<h3 id="query-parameters">Query Parameters</h3>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>account_ids</td>
+<td>An array of account ids. You can filter for a list of account IDS with the accounts/search API.</td>
+</tr>
+<tr>
+<td>account_stage_id</td>
+<td>The account stage id to change into. You can GET a list of possible stage ids and its associated information from /account_stages</td>
+</tr>
+</tbody></table>
+
+<h2 id="updating-account-ownership">Updating Account Ownership</h2>
+
+<blockquote>
+<p>Update a account owner:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST -H <span class="s2">"Content-Type: application/json"</span> -H <span class="s2">"Cache-Control: no-cache"</span> -d <span class="s1">'{
+    "api_key": "YOUR API KEY HERE",
+    "account_ids": ["account_id1", "account_id2"],
+    "owner_id": "owner_id"
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/accounts/update_owners"</span>
+</code></pre>
+
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/accounts/update_owners</code></p>
+
+<h3 id="query-parameters">Query Parameters</h3>
+
+<table><thead>
+<tr>
+<th>Parameter</th>
+<th>Description</th>
+</tr>
+</thead><tbody>
+<tr>
+<td>account_ids</td>
+<td>An array of account ids. You can filter for a list of account IDS with the accounts/search API.</td>
+</tr>
+<tr>
+<td>owner_id</td>
+<td>The owner id to change into. You can GET a list of possible users and its associated information from /users</td>
+</tr>
+</tbody></table>
+
           <h1 id="sequences-api">Sequences API</h1>
 
 <p>Use the Sequences API to interact with sequences, add contacts to sequence, and more!</p>
