--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ You must replace <code>YOUR_API_KEY</code> with your personal API key.
 }'</span> <span class="s2">"https://www.zenprospect.com/api/v1/organizations/[ORGANIZATION ID]/job_postings"</span>
 </code></pre>
 
-<p>This endpoint enriches a company based on the domain parameter passed in.</p>
+<p>Get a list of active job postings for a company.</p>
 
 <p><code class="prettyprint">GET https://www.zenprospect.com/api/v1/organizations/[ORGANIZATION ID]/job_postings</code></p>
 
