--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
     "sequence_active_in_other_campaigns": true,
     "sequence_no_email": true,
     "sequence_finished_in_other_campaigns": true,    
-}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/emailer_campaigns/[emailer_campaign_id]/add_contact_ids"</span>
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/emailer_campaigns/[replace with sequence id]/add_contact_ids"</span>
 </code></pre>
 
-<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/emailer_campaigns/add_contact_ids</code></p>
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/emailer_campaigns/[replace with sequence id]/add_contact_ids</code></p>
 
 <table><thead>
 <tr>
@@ -712,7 +712,7 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
 </tr>
 </thead><tbody>
 <tr>
-<td>id (required)</td>
+<td>id (required, embedded in URL)</td>
 <td>ID of the sequence</td>
 <td>&ldquo;583f2f7ed9ced98ab5bfXXXX&rdquo;</td>
 </tr>
