publish: better documentation
generated from commit e587411cd5a37cf073cc1013670c69049993a232

--- a/index.html
+++ b/index.html
@@ -699,10 +699,10 @@ Do not pass in <code>contact_stage_id</code> in this endpoint. Use contacts/upda
     "sequence_active_in_other_campaigns": true,
     "sequence_no_email": true,
     "sequence_finished_in_other_campaigns": true,    
-}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/emailer_campaigns/[replace with sequence id]/add_contact_ids"</span>
+}'</span> <span class="s2">"https://www.zenprospect.com/api/v1/emailer_campaigns/REPLACE_WITH_SEQUENCE_ID/add_contact_ids"</span>
 </code></pre>
 
-<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/emailer_campaigns/[replace with sequence id]/add_contact_ids</code></p>
+<p><code class="prettyprint">POST https://www.zenprospect.com/api/v1/emailer_campaigns/REPLACE_WITH_SEQUENCE_ID/add_contact_ids</code></p>
 
 <table><thead>
 <tr>
