publish: Update link to api settings page
generated from commit e85e9b843ea36999afb0978600e7dbde76e94114

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ curl -X GET -H <span class="s2">"Content-Type: application/json"</span> -H <span
 <p>If authentication is successful, you should expect to see {&ldquo;is_logged_in&rdquo;:true}</p>
 </blockquote>
 
-<p>ZenProspect uses API keys to allow access to the API. Your may request an API key <a href="https://www.zenprospect.com/app/#/settings/api">here</a></p>
+<p>ZenProspect uses API keys to allow access to the API. Your may request an API key <a href="https://www.zenprospect.com/app/#/settings/integrations/api">here</a></p>
 
 <p>ZenProspect expects for the API key to be included in all API requests to the server in as a query string parameter. </p>
 
