publish: zp => apollo 2
generated from commit a47c740a00eea4050c1ae7fbe271c848e10443f2

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </span>
     </a>
     <div class="tocify-wrapper">
-      <div style="padding: 20px 0 10px 10px;"><img src="images/logo-white.svg" /></div>
+      <div style="padding: 20px 0 10px 10px;"><img src="images/logo.png" /></div>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
         </div>
